substrate/frame/support/test/tests/pallet_ui/composite_enum_unsupported_identifier.stderr
error: expected one of: `FreezeReason`, `HoldReason`, `LockId`, `SlashReason`, `Task`
  --> tests/pallet_ui/composite_enum_unsupported_identifier.rs:27:11
   |
27 |     pub enum HoldReasons {}
   |              ^^^^^^^^^^^
